--- a/Haskell/Week 2/Starman/Starman.cabal
+++ b/Haskell/Week 2/Starman/Starman.cabal
@@ -32,10 +32,11 @@ test-suite Starman-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
+                     , hspec >= 2.2
                      , Starman
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/tjaskula/Starman
+  location: https://github.com/tjaskula/FutureLearn
