--- a/Haskell/Week4/ParsecTutorial/ParsecTutorial.cabal
+++ b/Haskell/Week4/ParsecTutorial/ParsecTutorial.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     ParsecTutorial, ShowParser
   build-depends:       base >= 4.7 && < 5
+                     , parsec
   default-language:    Haskell2010
 
 executable ParsecTutorial-exe
@@ -24,6 +25,7 @@ executable ParsecTutorial-exe
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
+                     , parsec
                      , ParsecTutorial
   default-language:    Haskell2010
 
@@ -33,6 +35,7 @@ test-suite ParsecTutorial-test
   main-is:             Spec.hs
   build-depends:       base
                      , hspec >= 2.2
+                     , parsec
                      , ParsecTutorial
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
